Set correct z-index for modal dialog

--- a/sources/easygenerator.Web/Content/helpers.less
+++ b/sources/easygenerator.Web/Content/helpers.less
@@ -2,6 +2,11 @@
 @minWidth: 635px;
 @animation-duration-default-value: 0.2s;
 
+@zindex-panel-right: 2100;
+@zindex-modal-blockout: 2200;
+@zindex-modal-dialog: 2300;
+@zindex-shell-header: 2100;
+
 .unselectable() {
     user-select: none;
     cursor: default;
