--- a/sources/easygenerator.Web/Content/shell.less
+++ b/sources/easygenerator.Web/Content/shell.less
@@ -64,7 +64,7 @@
         position: fixed;
         left: 0;
         top: 0;
-        z-index: 2100;
+        z-index: @zindex-shell-header;
         width: 100%;
 
         .editor-switcher {
